# zkp-query

./: CHANGELOG.md  Cargo.toml  FUNDING.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
benches/: tpch_benchmark.rs
src/: lib.rs
src/circuit/: aggregation.rs  config.rs  group_by.rs  join.rs  mod.rs  range_check.rs  sort.rs
src/database/: mod.rs
src/optimization/: mod.rs
src/prover/: mod.rs
src/recursive/: mod.rs
src/sql/: mod.rs
