[package]
name = "poneglyphdb"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = "0.3.1"
pasta_curves = "0.5"
ff = "0.13"
group = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "tpch_benchmark"
harness = false

